# London_Hackathon

./: .env  .env.example  .gitignore  Makefile  PRD.md  README.md  design.mg  docker-compose.yml  pyproject.toml
configs/prompts/: chat_grounded_answer.jinja2  continuation_plan.jinja2  extract_claims.jinja2  synthesize_section.jinja2
configs/retrieval_profiles/: contradiction_aware_graph_hybrid.yaml  graph_hybrid_expanded.yaml  hybrid_basic.yaml  keyword_only.yaml  schema_aware_graph_hybrid.yaml
configs/schemas/: due_diligence_v1.yaml
src/db/: parse.py  statics.py
src/dd_platform/: __init__.py  logging.py  main.py  settings.py
src/dd_platform/api/: __init__.py  deps.py  errors.py  router.py
src/dd_platform/api/routes/: chat.py  continuation.py  health.py  profile.py  retrieval.py  schemas.py
src/dd_platform/application/: __init__.py
src/dd_platform/application/services/: chat_service.py  continuation_service.py  profile_service.py  retrieval_service.py  schema_service.py
src/dd_platform/domain/: __init__.py  claim.py  company.py  conversation.py  evaluation.py  evidence.py  profile.py  retrieval.py  run.py  schema.py
src/dd_platform/orchestration/: __init__.py  graph.py  state.py
src/dd_platform/orchestration/nodes/: __init__.py  assess_freshness.py  extract_claims.py  finalize_run.py  load_local_context.py  normalize_company.py  persist_snapshot.py  plan_research.py  retrieve_external_evidence.py  synthesize_profile.py
src/dd_platform/persistence/: __init__.py
src/dd_platform/persistence/surreal/: __init__.py  client.py  migrations.py
src/dd_platform/persistence/surreal/queries/: __init__.py  evidence_search.py  freshness.py  (+1 more)
src/dd_platform/providers/llm/: azure_openai.py  base.py  models.py
src/dd_platform/providers/search/: __init__.py  aggregator.py  apify.py  base.py  serpapi.py  tavily.py
src/dd_platform/retrieval/: __init__.py  assembler.py  graph_retriever.py  hybrid_retriever.py  interfaces.py  keyword_retriever.py
src/dd_platform/utils/: hashing.py  ids.py  time.py  url_normalization.py
src/models/: chat.py  embeddings.py
src/utils/: configs.py
tests/: conftest.py
tests/contract/: test_domain_contracts.py  test_retrieval_profile_contract.py  test_schema_config_contract.py
tests/integration/: test_surreal_integration.py
tests/unit/domain/: test_claim.py  test_company.py  test_evidence.py  test_profile.py  test_retrieval.py  test_schema.py
tests/unit/retrieval/: test_assembler.py
tests/unit/services/: test_schema_service.py
tests/unit/utils/: test_hashing.py  test_ids.py  test_time.py  test_url_normalization.py
(+7 files in other folders)
