[project]
name = "dd-platform"
version = "0.1.0"
description = "Company Due Diligence Agent Platform for supply-chain profiling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # LLM
    "openai>=1.60.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    # LangGraph / LangChain
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    # Research tools
    "tavily-python>=0.5.0",
    "google-search-results>=2.4.0",
    "apify-client>=1.8.0",
    # Database
    "surrealdb>=1.0.8",
    # Utilities
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "tldextract>=5.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
    "respx>=0.22.0",
    "types-pyyaml>=6.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests requiring external services",
    "contract: contract validation tests",
    "evaluation: GraphRAG evaluation tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dd_platform"]
